# UI

./: CMakeLists.txt
examples/: CMakeLists.txt  demo.cpp  simple_demo.cpp  surface_test.cpp
include/: image_viewer.h
include/activity/: activity.h
include/application/: application.h
include/core/: choreographer.h  context.h  debug.h  event.h  event_dispatcher.h  handler.h  logger.h  looper.h  measure_spec.h  message.h  types.h
include/font/: font.h  freetype_font.h
include/graphics/: IFontRenderer.h  bitmap.h  blend_mode.h  dpi_manager.h  font_manager.h  freetype_wrapper.h  gdi_renderer.h  harfbuzz_wrapper.h  matrix.h  paint.h  path.h  pixel.h  pixel_writer.h  render_command.h  render_context.h  render_loop.h  renderer.h  surface.h  text_renderer.h  ui_thread.h
include/layout/: layout.h  linear_layout.h
include/platform/: event_translator.h  string_types.h
include/platform/interface/: window.h
include/platform/win32/: win32_surface.h
include/platform/windows/: window.h
include/view/: decor_view.h  gravity.h  layout.h  layout_params.h  linear_layout.h  measure_spec.h  view.h  view_group.h  view_root.h  view_root_impl.h  window_manager.h
include/widgets/: button.h  linear_layout_view.h  text_view.h  view_group.h  widget.h
src/: CMakeLists.txt  image_viewer.cpp  main.cpp
src/activity/: activity.cpp
src/application/: application.cpp
src/core/: choreographer.cpp  debug.cpp  event.cpp  handler.cpp  logger.cpp  looper.cpp  message.cpp
src/font/: freetype_font.cpp
src/graphics/: IFontRenderer.cpp  bitmap.cpp  blend_mode.cpp  dpi_manager.cpp  font_manager.cpp  freetype_wrapper.cpp  gdi_renderer.cpp  harfbuzz_wrapper.cpp  matrix.cpp  paint.cpp  path.cpp  render_command.cpp  render_context.cpp  render_loop.cpp  surface.cpp  text_renderer.cpp  ui_thread.cpp
src/layout/: linear_layout.cpp
src/platform/win32/: win32_surface.cpp
src/platform/windows/: window.cpp
src/view/: decor_view.cpp  linear_layout.cpp  view.cpp  view_group.cpp  view_root.cpp  view_root_impl.cpp  window_manager.cpp
src/widgets/: button.cpp  linear_layout_view.cpp  text_view.cpp  view_group.cpp  widget.cpp
